# llm_engineering

./: .gitignore  .pre-commit-config.yaml  README.md  helpers.py  main.py  pyproject.toml
claude/: client.py
docs/superpowers/plans/: 2026-07-11-gradio-app-scaffold.md  2026-07-12-gradio-website-summarizer.md  2026-07-13-gradio-guitar-store-chat.md  2026-07-14-gradio-airline-chat-tool-use.md  2026-07-15-gradio-airline-sqlite-pricing.md  2026-07-17-gradio-airline-multimodal.md
docs/superpowers/specs/: 2026-07-11-gradio-app-scaffold-design.md  2026-07-12-gradio-multibot-selector-design.md  2026-07-12-gradio-website-summarizer-design.md  2026-07-13-gradio-guitar-store-chat-design.md  2026-07-14-gradio-airline-chat-tool-use-design.md  2026-07-17-gradio-airline-multimodal-design.md
gradio_app/: __init__.py  __main__.py  airline.py  airline_multimodal.py  app.py  chat_voice.py  chatinterface.py  multibot.py  website_summarizer.py
gradio_app/.gradio/flagged/: dataset1.csv
hugging_face/: sentiment.py  tts_app.py
notebooks/: hf_open_models_tour.ipynb
openrouter/: __init__.py  chat.py  client.py
