[project]
name = "llm-engineering"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.116.0",
    "gradio>=6.20.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]
